Change Log:
v0.9.2
-sql: add new Debt table and DebtPayment table

v0.9.1
-add posting cancel feature for Debt Payment Transaction
-fixed doValidation function BUG when submiting
-add Print debt transaction page (layout still temporary)
-add error message on dashboard/index page

v0.9.0
-new Debt Payment Transaction (CRUD, DataTable, and All form cosmetics working)
-change data-table search method on all page
-remove User field on form Debt Transaction
-supplier delete now just change the deletedate field
-add DebtRemaining column on Debt Table
-fixed form-validation method on all page
-fixed bug when deleting Debt data

v0.8.2
-fixed debt nominal form-validation bug
-db: change tdebt table from debt_capturepath to debt_imageblob
-debt image capture now save into database instead of create image file

v0.8.1
-fixed Delete debt issue
-fixed Create debt issue when no images directory exist
-fixed bug when Submit Form 2 times in a row on User, User Level, and Module page
-fixed validation message layout on Profile, User, and User Level page
-add new function to check user privilege when accessing a page
-add posting cancel feature for Debt Transaction

v0.8.0
-new Debt Transaction (CRUD, DataTable, and All form cosmetics working)
-new bootstrap-toggle plugins 
-new ScriptCam plugins
-fixed a lot of bugs
-fixed several global Function functionality
-change getCurrentPageURL method on all ajax pages

v0.7.4
-add select2 plugins css and js
-change Form title on all page
-fixed missing variable when submiting Form on page supplier

v0.7.3
-new SESSION['access'] to store user's access right for accessing a page
-implemented new access feature to user_level, supplier, user, and module page
-change update and delete button on all data tables
-add default parameter on function getPageName
-fixed function getCurrentPageData bug
-fixed module list checkbox behaviour on page user_level

v0.7.2
-new user_level access feature
-add new field 'hascrud' to table module 