@@ -1,6 +1,7 @@
 Change Log:
 v0.9.2
 -sql: add new Debt table and DebtPayment table
+-sql: update tmodule
 
 v0.9.1
 -add posting cancel feature for Debt Payment Transaction
